syntax = "proto3";

package auth;

import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "pkg/grpc";

message LoginRequest {
	string email = 1 [(validate.rules).string.email = true];
	string password = 2 [(validate.rules).string = {min_len: 6, max_len: 64}];
}

message LoginResponse {
	string token = 1;
}

service AuthService {
	rpc Login(LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
    		post: "/login"
    		body: "*"
	    };
	}
	rpc Register(RegisterRequest) returns (RegisterResponse) {
		option (google.api.http) = {
    		post: "/register"
    		body: "*"
	    };
	}
}

message RegisterRequest {
	string email = 1 [(validate.rules).string.email = true];
	string password = 2 [(validate.rules).string = {min_len: 6, max_len: 64}];
	string username = 3 [(validate.rules).string = {min_len: 5, max_len: 64}];
}

message RegisterResponse {
	uint64 id = 1;
	string username = 2;
}
